# bevy_web_asset

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: web_image.rs
src/: filesystem_watcher.rs  lib.rs  web_asset_io.rs  web_asset_plugin.rs  web_asset_source.rs  web_filesystem_watcher.rs
