[package]
authors = ["Johan Helsing <johanhelsing@gmail.com>"]
categories = ["network-programming", "game-development", "wasm", "web-programming"]
description = "Implementations for http(s) asset sources for Bevy"
edition = "2021"
keywords = ["gamedev", "networking", "wasm", "bevy"]
license = "MIT OR Apache-2.0"
name = "bevy_web_asset"
repository = "https://github.com/johanhelsing/bevy_web_asset"
version = "0.7.0"

[dependencies]
bevy = {version = "0.12", default-features = false, features = ["bevy_asset"]}
ehttp = "0.3"

[dev-dependencies]
bevy = {version = "0.12", default-features = false, features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_sprite",
  "png",
  "x11", # GitHub Actions runners don't have libxkbcommon installed, so can't use Wayland
]}
