[package]
authors = ["Johan Helsing <johanhelsing@gmail.com>"]
categories = [
  "network-programming",
  "game-development",
  "wasm",
  "web-programming",
]
description = "Implementations for http(s) asset sources for Bevy"
edition = "2021"
keywords = ["gamedev", "networking", "wasm", "bevy"]
license = "MIT OR Apache-2.0"
name = "bevy_web_asset"
repository = "https://github.com/johanhelsing/bevy_web_asset"
version = "0.9.0"

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
  "bevy_asset",
] }
pin-project = "1.1.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
surf = { version = "2.3", default-features = false, features = [
  "h1-client-rustls",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.67", default-features = false }
js-sys = { version = "0.3", default-features = false }
wasm-bindgen = { version = "0.2", default-features = false }
wasm-bindgen-futures = "0.4"

[dev-dependencies]
bevy = { version = "0.14", default-features = false, features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_sprite",
  "png",
  "webgl2",
  "x11",                # GitHub Actions runners don't have libxkbcommon installed, so can't use Wayland
] }
