[package]
authors = ["Johan Helsing <johanhelsing@gmail.com>"]
categories = [
  "network-programming",
  "game-development",
  "wasm",
  "web-programming",
]
description = "Implementations for http(s) asset sources for Bevy"
edition = "2021"
keywords = ["gamedev", "networking", "wasm", "bevy"]
license = "MIT OR Apache-2.0"
name = "bevy_web_asset"
repository = "https://github.com/johanhelsing/bevy_web_asset"
version = "0.10.1"

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
  "bevy_asset",
] }
pin-project = "1.1.5"
directories = {version = "5.0.1", optional = true}
slug = {version = "0.1.6", optional = true}

[features]
default = ["redirect"]
redirect = []  # enables surf::middleware::Redirect
cache_asset = ["directories", "slug"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
surf = { version = "2.3", default-features = false, features = [
  "h1-client-rustls",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.67", default-features = false }
js-sys = { version = "0.3", default-features = false }
wasm-bindgen = { version = "0.2", default-features = false }
wasm-bindgen-futures = "0.4"

[dev-dependencies]
bevy = { version = "0.15", default-features = false, features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_sprite",
  "bevy_window",        # https://github.com/bevyengine/bevy/issues/16568
  "png",
  "webgl2",
  "x11",                # GitHub Actions runners don't have libxkbcommon installed, so can't use Wayland
] }
